<resources>
    <string name="app_name">کجا بریم؟</string>
    <string name="home_head_text">کجا بریم؟</string>
    <string name="profile_head_text">حساب کاربری</string>
    <string name="search_head_text">جستجو</string>
    <string name="title_activity_maps">Map</string>
    <string name="about_restaurant">درباره رستوران</string>
    <string name="phone">تلفن</string>
    <string name="price">قیمت</string>
    <string name="open_hours">ساعت بازبودن</string>
    <string name="features">ویژگی ها</string>
    <string name="place_images">عکس ها</string>
    <string name="more_place_images">مشاهده تمامی عکس ها</string>
    <string name="ratings_reviews">امتیازات و نظرات</string>
    <string name="overall">امتیاز کلی</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="foodResponse">غذا</string>
    <string name="service">سرویس دهی</string>
    <string name="ambiance">محیط</string>
    <string name="see_all_reviews">مشاهده تمامی نظرات</string>
    <string name="summary">خلاصه</string>
    <string name="your_ratings">امتیاز شما</string>
    <string name="confirm">تایید</string>
    <string name="signup_toolbar_text">ثبت نام</string>
    <string name="send_code_text">کد را وارد نمایید</string>
    <string name="hint_code">کد دریافتی</string>
    <string name="btn_send_phone">تایید</string>
    <string name="send_phone_text">شماره تلفن خود را وارد نمایید</string>
    <string name="hint_phone">شماره تلفن</string>
    <string name="edit_profile_head_text">ویرایش پروفایل</string>
    <string name="hint_first_name">نام</string>
    <string name="hint_last_name">نام خانوادگی</string>
    <string name="internal_storage">Internal storage</string>
    <string name="followers">دنبال کنندگان</string>
    <string name="followings">دنبال شوندگان</string>
    <string name="edit">ویرایش</string>
    <string name="reviews">نظرات</string>
    <string name="favorite_places">مکان های مورد علاقه</string>
    <string name="scores">امتیازات</string>
    <string name="your_review">نظر شما در مورد این مکان</string>
    <string name="follow">دنبال کردن</string>
    <string name="dont_follow">لغو دنبال کردن</string>
    <string name="friend_head_text">دوستان</string>
    <string name="best_places">برترین ها</string>
    <string name="suggested_places">مخصوص شما</string>
    <string name="search_hint">جستجو</string>
    <string name="submit_your_ratings">امتیاز دهید</string>
    <string name="place_images_head_text">عکس های آپلود شده</string>
    <string name="favorite_place_head_text">مکان های مورد علاقه</string>
    <string name="user_review_head_text">نظرات</string>
    <string name="favorite_place_types">سلیقه کاربر</string>
    <string name="your_favorite_place_types">سلیقه شما</string>
    <string name="type_italian">ایتالیایی</string>
    <string name="type_irani">ایرانی</string>
    <string name="type_fast_food">فست فود</string>
    <string name="type_cafe">کافه</string>
</resources>
