<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp"
    android:layoutDirection="rtl"
    android:id="@+id/rootView"
    tools:ignore="RtlHardcoded">

    <LinearLayout
        android:id="@+id/yourOverallScoreLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <ir.fearefull.wheretoapp.view.base.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTheme.TextAppearance.Medium"
            android:textColor="@color/textDarkSecondary"
            android:padding="4dp"
            android:layout_gravity="center"
            android:text="@string/overall" />
        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/overallScoreRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="24dp"
            android:maxHeight="24dp"
            android:stepSize="1"
            app:mrb_fillBackgroundStars="@color/ratingBarColor"
            app:mrb_secondaryProgressTint="@color/ratingBarColor"
            app:mrb_progressTint="@color/ratingBarColor" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:gravity="center">
        <ir.fearefull.wheretoapp.view.base.MyTextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            style="@style/MyTheme.TextAppearance.Small"
            android:textColor="@color/textDarkSecondary"
            android:text="@string/foodResponse" />
        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/foodScoreRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="18dp"
            android:maxHeight="18dp"
            android:stepSize="1"
            app:mrb_fillBackgroundStars="@color/ratingBarColor"
            app:mrb_secondaryProgressTint="@color/ratingBarColor"
            app:mrb_progressTint="@color/ratingBarColor" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="horizontal"
        android:gravity="center">
        <ir.fearefull.wheretoapp.view.base.MyTextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            style="@style/MyTheme.TextAppearance.Small"
            android:textColor="@color/textDarkSecondary"
            android:text="@string/service" />
        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/serviceScoreRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="18dp"
            android:maxHeight="18dp"
            android:stepSize="1"
            app:mrb_fillBackgroundStars="@color/ratingBarColor"
            app:mrb_secondaryProgressTint="@color/ratingBarColor"
            app:mrb_progressTint="@color/ratingBarColor" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="horizontal"
        android:gravity="center">
        <ir.fearefull.wheretoapp.view.base.MyTextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            style="@style/MyTheme.TextAppearance.Small"
            android:textColor="@color/textDarkSecondary"
            android:text="@string/ambiance" />
        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/ambianceScoreRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="18dp"
            android:maxHeight="18dp"
            android:stepSize="1"
            app:mrb_fillBackgroundStars="@color/ratingBarColor"
            app:mrb_secondaryProgressTint="@color/ratingBarColor"
            app:mrb_progressTint="@color/ratingBarColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="4dp"
            android:background="@drawable/background_confirm_button"
            android:text="@string/confirm"
            android:textSize="14sp"
            android:textColor="@color/textLightPrimary" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>