<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    tools:context="ir.fearefull.wheretoapp.controller.view_controller.verify.fragment.SendPhoneNumberFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_layout"
        android:layout_alignParentTop="true"
        android:id="@+id/header_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            tools:ignore="UselessParent">

            <ir.fearefull.wheretoapp.view.base.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="10dp"
                android:text="@string/send_phone_text"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:id="@+id/main_layout"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <ir.fearefull.wheretoapp.view.base.MyEditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:gravity="right"
                android:textSize="16sp"
                android:inputType="phone"
                android:textColor="@color/textDarkPrimary"
                android:hint="@string/hint_phone"
                android:textColorHint="@android:color/darker_gray"
                tools:ignore="RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>

        <ir.fearefull.wheretoapp.view.base.MyButton
            android:id="@+id/buttonSendPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_send_phone"
            android:textSize="16sp"
            android:background="@drawable/button"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:minHeight="0dp"
            android:enabled="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@android:color/white"
            android:focusable="true"
            android:clickable="true"/>
    </LinearLayout>
</RelativeLayout>